need to fix how it looks on mobile etc

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -11,26 +11,36 @@ body{
   display:flex;
   flex-wrap:wrap;
   width:100%;
-
+  padding-left:0;
 
   li {
   display:flex;
-  // flex: 1 0 100%;
-  // height:100vw;
+  flex: 1 0 100%;
   height:450px;
   list-style: none;
   align-items: center;
+  position: relative;
+  // overflow:hidden;
 
     a { 
     height:400px;
     width:400px;
+    color:white;
      }
   
     .articlePic {
-    width:400px;
-    height: 400px;
-     }
+    display:block;
+    width:90vw;
+    height: 85vw;
+    background-size:cover;
 
+     }
+    p{
+      position: absolute;
+      padding-top:0;
+      padding-bottom:0;
+      bottom:0;
+    }
 }
 }
 
